[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/star/starfish.png" type="Texture" id=1]
[ext_resource path="res://scripts/ring.gd" type="Script" id=2]

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 25.0, -25.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Texture:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.25, 0.25 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, -0.500001 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Texture:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Texture:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.165605, 0.226027 ) ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 20.0

[node name="Ring" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
walk_speed = 60

[node name="Animation" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Texture" type="Sprite" parent="."]
position = Vector2( 1, -0.500001 )
scale = Vector2( 0.165605, 0.226027 )
texture = ExtResource( 1 )

[node name="ScoreArea" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="ScoreArea"]
position = Vector2( 0, 1 )
shape = SubResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.999998, -0.499999 )
scale = Vector2( 2.4, 2.25 )

[connection signal="body_entered" from="ScoreArea" to="." method="on_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="on_screen_exited"]
